deleted unnecessary HTML code

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <label for="email" class="sr-only">Email</label>
                 <input class="form-control input-lg rounded-0" id="email" name="email" type="text" placeholder="Email / Username" required="">
                 <i class="fa fa-user fa-lg position-absolute"></i>
-              <span style="opacity: 1; left: 502px; top: 14.5px; width: 19px; min-width: 19px; height: 13px; position: absolute;"></span></div>
+              </div>
               <label for="password" class="pull-left sr-only">Password</label>
               <div class="position-relative">
                 <input class="form-control input-lg rounded-0" id="password" name="password" type="password" placeholder="Password" required="">
                 <i class="fa fa-lock fa-lg position-absolute"></i>
-              <span style="opacity: 1; left: 502px; top: 14.5px; width: 19px; min-width: 19px; height: 13px; position: absolute;"></span></div>
+              </div>
               <div class="text-center my-4">
                 <button class="btn btn-primary text-white btn-lg text-uppercase" type="submit">Log in</button>
               </div>
